--- a/style.css
+++ b/style.css
@@ -20,9 +20,9 @@
 /*----------------------Nav---------------------------*/
 nav { 
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     margin: 0px 0px;
-    padding: 0 50px;
+    padding: 0 3%;
     height: 90px;
     align-items: center;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
@@ -43,7 +43,7 @@ nav div{
 ul{
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 15%;
 }
 ul li a{
     text-decoration: none; 
@@ -58,17 +58,17 @@ ul li a{
     display: flex;
 }
 .logo img{
-    width: 60px;
+    width: 8%;
 }
 .icons{
     display: flex;
     justify-content: flex-end;
-    padding-right: 20px;
+    padding-right: 3%;
     width: 30%;
-    gap: 15px;
+    gap: 8%;
 }
 .icons svg {
-    width: 23px;
+    width: 9%;
     display: flex;
 }
 /*----------------------Main----------------------*/
@@ -93,7 +93,7 @@ main{
     flex-direction: column;
     height: auto;
     margin: 0;
-    padding: 50px 27%;
+    padding: 3% 27%;
     gap: 40px;
 }
 .sec-1 h1{
@@ -114,7 +114,7 @@ main{
     justify-content: center;
     gap: 30px;
     height: auto;
-    padding: 40px 0;
+    padding: 2%;
 }
 .sec-3{
     background-color: white;
@@ -125,7 +125,7 @@ main{
     flex-direction: column;
     height: auto;
     margin: 0;
-    padding: 50px 27%;
+    padding: 3% 27%;
     gap: 40px;
 }
 .sec-3 h1{
@@ -138,10 +138,26 @@ main{
 .sec-4{
     display: flex;
     justify-content: center;
-    gap: 40px;
+    gap: 3px;
     width: 100%;
-    padding: 50px;
+    padding: 6%;
+    height: 100%;
     flex-wrap: wrap;
+}
+.sec-4 div div {
+    width: 100%;
+    overflow: hidden;
+    object-fit: cover;
+    padding: 0;
+}
+.sec-4 img {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+.sec-4 img:hover{
+    transform: scale(1.1);
 }
 .sec-4 div{
     display: flex;
@@ -152,7 +168,7 @@ main{
     width: 30%;
     gap: 25px;
     min-width: 350px;
-    padding: 0px 40px 30px 40px;
+    padding: 0px 2% 30px 2%;
 }
 .sec-4 img {
     width: 100%;
@@ -163,10 +179,14 @@ main{
 .sec-4 h3{
     font-size: 20px;
 }
+.sec-4italic{
+    font-style: italic;
+}
 .sec-4 button {
     border: none;
     background-color: #ae9669;
     padding: 10px;
+    color: white;
 }
 .sec-5{
     background-color: white;
@@ -177,9 +197,13 @@ main{
     flex-direction: column;
     height: auto;
     margin: 0;
-    padding: 50px 30%;
+    padding: 3% 30%;
     gap: 40px;
 }
+.sec-5 img {
+    width: 100%;
+}
+/*--------------------Section-6------------------------------------*/
 .sec-6{
     background-color: #ffeff5;
     display: flex;
@@ -192,61 +216,89 @@ main{
     padding: 50px 7%;
     gap: 40px;
 }
-.grid-container {
+.grid-container{
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 columnas */
-    gap: 20px; /* Espacio entre los elementos */
-    padding: 20px;
-  }
-  
-  .item {
-    position: relative;
-    background-size: cover;
-    background-position: center;
-    height: 400px; /* Ajusta la altura según sea necesario */
-    width: 500px;
-    border-radius: 10px; /* Bordes redondeados */
+    grid-template-columns: 1fr 1fr;
+    gap: 30px; 
+    width: 100%; 
+    padding: 0 7%;
+}
+.left1{
+    display: flex;
+    border-radius: 1%;
+    width: 100%;
+    padding: 0;
     overflow: hidden;
-    color: white;
+}
+.item_left{
+    padding: 0;
+    height: 592px;
+    position: relative;
+    border-radius: 1%;
+    width: 100%;
+}
+.item_left img{
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    left: -65%; /* Ajustar para mover hacia la izquierda */
+}
+.right1{
+    width: 100%;
+    height: 592px;
+    gap: 30px;
+    overflow: hidden;
+    border-radius: 1%;
+    display: flex;
+    flex-direction: column;
+}
+.right1 img {
+    width: 100%;
+    object-fit: cover;
+    overflow: hidden;
+    border-radius: 1%;
+}
+.item_right{
+    display: flex;
+    position: relative;
+    height: 50%;
+    
+}
+.overlay {
+    position: absolute;     /* El overlay se posiciona sobre la imagen */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);  
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    flex-direction: column;
-  }
-  
-  .item h2 {
-    font-size: 24px;
-    margin: 0;
-  }
-  .item :hover{
-    background-size: 120%;
-  }
-  
-  .item a {
-    font-size: 16px;
-    color: white;
-    margin-top: 10px;
-    text-decoration: none;
-    border-bottom: 1px solid white;
-  }
-  
-  .item a:hover {
-    opacity: 0.8;
-  }
-  
-  .item1 {
-    background-image: url('./img/grid1.jpg'); /* Imagen de ejemplo */
-    
-  }
-  
-  .item2 {
-    background-image: url('./img/grip2.jpeg'); /* Imagen de ejemplo */
-  }
-  
-  .item3 {
-    background-image: url('./img/grip3.webp'); 
-  }
+    font-size: 1rem;
+    gap: 15px;
+}
+.overlay a{
+    color: inherit;
+}
+
+.item_left:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.item_right:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+/* Estilo del enlace */
+.image-link {
+    position: relative;     
+    display: inline-block;   
+    text-decoration: none;  
+}
+
+  /*--------------------Section-7------------------------------------*/
   .sec-7{
     background-color: white;
     display: flex;
@@ -286,6 +338,7 @@ main{
     font-size: 13px;
     color: #707273;
 }
+/*----------------Section-8---------------------*/
 .sec-8{
     background-color: #ffeff5;
     display: flex;
@@ -296,9 +349,18 @@ main{
     margin: 0;
     padding: 40px 50px;
     gap: 30px;
+    
 }
 .sec-8 img{
     border-radius: 1%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.left:hover img{
+    transform: scale(1.02);
+    transition: transform 0.8s ease;
 }
 .left{
     display: flex;
@@ -306,10 +368,16 @@ main{
     justify-content: center;
     text-align: left;
     gap: 15px;
+    padding: 0;
+    margin: 0;
 }
 .left a{
     text-decoration: none; 
+    padding: 0;
+    margin: 0;
     color: inherit;
+    overflow: hidden;
+    border-radius: 1%;
 }
 .grid2{
     display: grid;
@@ -324,33 +392,50 @@ main{
     padding-bottom:  20px;
     padding: 0 20px;
 }
+
+.right a{
+    text-decoration: none; 
+    padding: 0;
+    margin: 0;
+    color: inherit;
+    overflow: hidden;
+    border-radius: 1%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    height: 100%;
+}
 .right img{
-    width: 220px;
+    width: 100%;
+    height: 100%;
+    max-width: 220px;
+    object-fit: cover;
+    border-radius: 2%;
 }
 .subright{
     display: flex;
     text-align: left;
     gap: 20px;
     align-items: center;
-    margin-top: 20px;
+    height: auto;
     width: 100%;
     min-width: 300px;
+
+}
+.subright:hover img{
+    transform: scale(1.1);
+    transition: transform 0.8s ease;
 }
 .subright div {
     width: 50%;
 }
 
-.subright a{
-    text-decoration: none; 
-    color: inherit;
-    padding-top: 20px;
-}
 /*---------------Footer------------------------------*/
 footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px 0;
+    padding: 2% 0;
     gap: 30px;
     background-color: #333638;
     color: white;
@@ -377,7 +462,8 @@ footer{
 .footer-section{
     display: flex;
     flex-direction: column;
-    padding: 20px 20px;
+    padding: 3% 3%;
+    width: 100%;
     max-width: 300px;
     min-width: 250px;
     gap: 20px;
@@ -385,22 +471,24 @@ footer{
 .footer-section ul{
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 .social-icons img {
-    width: 30px;
+    width: 12%;
 }
 .footer-bottom{
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 20px 200px;
+    padding: 3% 13%;
 }
 .payment-icons{
     display: flex;
     gap: 10px;
 }
 .payment-icons img{
-    width: 170px;
+    width: 50%;
+    max-width: 170px;
 }
 .float{
     display: flex;
@@ -408,14 +496,14 @@ footer{
     background-color: transparent;
     align-items: center;
     margin-top: 40%;
-    margin-left: 10px;
+    margin-left: 1%;
     z-index: 1000;
     font-size: 20px;
 }
 .float a{
     text-decoration: none; 
     color: inherit;
-    width: 90px;
+    width: 70%;
     height: 90px;
     border-radius: 50%;
     border: solid 1px;
