--- a/style.css
+++ b/style.css
@@ -70,9 +70,10 @@ ul li a{
     padding-right: 3%;
     width: 30%;
     gap: 8%;
+   
 }
 .icons svg {
-    width: 9%;
+    width: 20px;
     display: flex;
 }
 /*----------------------Main----------------------*/
@@ -120,7 +121,9 @@ main{
     gap: 30px;
     height: auto;
     padding: 2%;
+    overflow: hidden;
 }
+
 /*---------------Section-3-----------------*/
 .sec-3{
     background-color: white;
@@ -458,6 +461,7 @@ footer{
     gap: 30px;
     background-color: #333638;
     color: white;
+    overflow: hidden;
 }
 .footer-container{
     display: flex;
@@ -535,12 +539,32 @@ footer{
 }
 /*----------------mobile-------------------*/
   @media (max-width: 800px) {
+    .main-img{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 400px;
+        min-height: 400px;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+    .main-img img{
+        width: 100%; 
+        height: 100%; 
+        object-fit: cover;
+        margin: 0;
+        padding: 0;
+    }
     .grid-container {
       grid-template-columns: 1fr; 
     }
     nav .navers, nav .icons{
         display: none;
     } 
+    .sec-2 img{
+        max-width: 150px;
+    }
     .grid2{
         display: flex;
     
