--- a/style.css
+++ b/style.css
@@ -912,14 +912,13 @@ footer{
     display: flex;
     overflow-x: auto; /* Activa el scroll horizontal */
     scroll-snap-type: x mandatory; /* Desplazamiento "suave" entre elementos */
-    scrollbar-width: none;
-}
-.imgbottom::-webkit-scrollbar {
-    display: none; /* Oculta el scroll en navegadores basados en WebKit */
 }
 .titles7{
     justify-self: center;
     align-self: center;
+}
+.carousel{
+    scroll-snap-align: center;
 }
 
     /*-----------Footer--------------*/
