The carousel feature have been added to Sec-8-mobile

--- a/style.css
+++ b/style.css
@@ -750,6 +750,12 @@ footer{
 .sec-mobile{
     display: flex;
     gap: 40px;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scrollbar-width: none;
+}
+.sec-mobile::-webkit-scrollbar {
+    display: none;
 }
 .mobile-items{
     width: 50%;
