--- a/style.css
+++ b/style.css
@@ -760,6 +760,10 @@ footer{
 }
 /*----------------mobile-------------------*/
     @media (max-width: 1200px) {
+    /*----------------------Naver------------------------*/
+    nav{
+        height: 90px;
+    }
         /*------------------Section-2--------------------*/  
     .sec-2{
         justify-content: flex-start;
